ensure alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 body{
+    font-family: "Inter", sans-serif;
     width: 100%;
     margin: 0px auto;
 }
@@ -10,7 +14,9 @@ body{
             margin-bottom: 10px;
         }
         #Banner_section_paragraph {margin-top: 50px;font-size: larger;}
-
+        section {
+            margin-bottom: 50px;
+        }
         #menu {
             display: flex;
             justify-content: space-between;
@@ -104,10 +110,10 @@ body{
         .Spot_button{
             padding: 10px;
             border-radius: 5px;
-            border: none;
         }
         ul li::marker {
 
     color: #2563eb;
+    text-align: left;
 
 }
